BETA-1.3.7
FurnaceExporter GUI Implementation
Failsafe checks for Exporter
Network extension for Exporter block
Cleaned up codebase
Removed unused methods
Removed/replaced deprecated functions